# Greeks-Calculator

./: .gitignore  Cargo.toml  README.md
benches/: benchmarks.rs
examples/: main.rs
playground/: COURSE_CURRICULUM.md  README.md  server.py
playground/public/: advice.js  advice_tests.html  app.js  exercises.js  index.html  lessons.js  styles.css  tests.html
playground/public/css/: styles.css
playground/public/js/: advice.js  app.js  calculator.js  lessons.js  strategy.js  ui_utils.js
src/: lib.rs  types.rs  wasm.rs
src/ad/: dual.rs  mod.rs  ops.rs
src/pricing/: black_scholes.rs  mod.rs
src/volatility/: mod.rs  surface.rs  svi.rs
